--- a/AV/Development/listLinkedCON.css
+++ b/AV/Development/listLinkedCON.css
@@ -30,6 +30,14 @@
   width: 600px;
 }
 
+#LlistVarsCON {
+  height: 280px;
+}
+
+#LlistVarsCON .jsavoutput.jsavline {
+  height: 70px;
+}
+
 .jsavhorizontallist.jsavautoresize .jsavnode {
   min-width: 30px;
   max-width: 30px;
