--- a/AV/Development/listLinkedCON.css
+++ b/AV/Development/listLinkedCON.css
@@ -61,6 +61,16 @@
   width: 510px;
 }
 
+#LlistSpecInsertCON {
+  height: 290px;
+}
+#LlistSpecInsertCON .jsavcode{
+  border: 1px solid;
+  border-color: white;
+  margin-left: 338px;
+  width: 510px;
+}
+
 .jsavhorizontallist.jsavautoresize .jsavnode {
   min-width: 30px;
   max-width: 30px;
