--- a/AV/Development/listLinkedCON.css
+++ b/AV/Development/listLinkedCON.css
@@ -10,17 +10,6 @@
   height: 100px;
 }
 
-#listLinkedCON2 {
-  height: 345px;
-}
-
-#listLinkedCON2 .jsavcode{
-  border: 1px solid;
-  border-color: white;
-  margin-left: 270px;
-  width: 600px;
-}
-
 #LlistBadCON {
   height: 250px;
 }
@@ -71,7 +60,16 @@
   margin-left: 338px;
   width: 510px;
 }
+#LlistRemoveCON {
+  height: 345px;
+}
 
+#LlistRemoveCON .jsavcode{
+  border: 1px solid;
+  border-color: white;
+  margin-left: 270px;
+  width: 600px;
+}
 
 .jsavhorizontallist.jsavautoresize .jsavnode {
   min-width: 30px;
