--- a/AV/Development/listLinkedCON.css
+++ b/AV/Development/listLinkedCON.css
@@ -71,7 +71,7 @@
   top: 140px;
   width: 700px;
 }
-#LlistRemoveCON .jsavhorizontalarray .jsavnode {
+.jsavhorizontalarray.jsavautoresize .jsavnode {
   min-width: 35px;
   max-width: 35px;
   min-height: 35px;
