--- a/AV/Development/listLinkedCON.css
+++ b/AV/Development/listLinkedCON.css
@@ -41,7 +41,7 @@
 }
 
 #LlistInsertCON {
-  height: 450px;
+  height: 550px;
 }
 #LlistInsertCON .jsavcode{
   border: 1px solid;
@@ -73,15 +73,18 @@
 }
 
 #LlistPosCON {
-  height: 515px;
+  height: 440px;
 }
 
 #LlistPosCON .jsavcode{
   border: 1px solid;
   border-color: white;  
   position: relative;
-  top: 140px;
+  top: 70px;
   width: 700px;
+}
+#LlistPosCON .jsavoutput.jsavline{
+  height: 55px;
 }
 .jsavhorizontalarray.jsavautoresize .jsavnode {
   min-width: 35px;
