--- a/AV/Development/listLinkedCON.css
+++ b/AV/Development/listLinkedCON.css
@@ -99,6 +99,9 @@
 #LlistPointerCON .jsavoutput.jsavline{
   height: 55px;
 }
+#LlistPointerCON .jsavlabel.jsavpointer{
+  width: 30px;
+}
 .jsavhorizontallist.jsavautoresize .jsavnode {
   min-width: 30px;
   max-width: 30px;
