Using Pointer API in Linked Lists AVs.

--- a/AV/Development/listLinkedCON.css
+++ b/AV/Development/listLinkedCON.css
@@ -105,9 +105,12 @@
   height: 30px;
 }
 .jsavcanvas{
-	height: 200px;
+  height: 200px;
 }
-
+.jsavpointer{
+  width: 35px;
+  text-align: center;
+}
 
 
 
