--- a/AV/Development/listQueueCON.css
+++ b/AV/Development/listQueueCON.css
@@ -9,6 +9,11 @@
 .jsavlabel.jsavpointer{
   width:35px;
 }
+.jsavlabel{
+  width:40px;
+  height: 22px;
+  text-align:center;
+}
 .jsavhorizontallist.jsavautoresize .jsavnode{
   min-width: 30px;
   min-height: 30px; 
@@ -45,7 +50,19 @@
 #AQueueDriftposCON .jsavoutput.jsavline {
   height: 75px;
 }
-#AQueueDriftposCON .jsavcode{
+#AQueueBadCON {
+  height: 280px;
+}
+#AQueueBadCON .jsavoutput.jsavline {
+  height: 75px;
+}
+#AQueueCircularCON {
+  height: 400px;
+}
+#AQueueCircularCON .jsavoutput.jsavline {
+  height: 50px;
+}
+#AQueueCircularCON .jsavcode{
   border: 1px solid;
   border-color: white;  
   position: relative;
@@ -53,4 +70,3 @@
   left: 190px;
   width: 450px;
 }
-
