--- a/AV/Development/proficiency.css
+++ b/AV/Development/proficiency.css
@@ -19,12 +19,30 @@ p.instructions {
   border: 1px solid black;
 }
 .jsavtreenode.emptynode {
-  border: 1px dashed #777;
-  color: #777;
+  border: 1px dashed #777 !important;
+  background-color: #fff !important;
+  color: #777 !important;
+}
+.jsavtreenode.rednode {
+  background-color: #f00;
+  color: #fff;
+}
+.jsavtreenode.blacknode {
+  background-color: #000;
+  color: #fff;
 }
 .selected, .selected .jsavvalue, .jsavarray.jsavbararray .jsavindex.selected .jsavvalue{
   font-size: 130%;
   background-color: #ddf !important;
+}
+.jsavtreenode.jsavredblacknode.rednode.selected, .jsavtreenode.jsavredblacknode.rednode.selected .jsavvalue {
+  background-color: #f00 !important;
+}
+.jsavtreenode.jsavredblacknode.blacknode.selected, .jsavtreenode.jsavredblacknode.blacknode.selected .jsavvalue {
+  background-color: #000 !important;
+}
+.jsavtreenode.jsavredblacknode.selected {
+  box-shadow: 0px 0px 5px 10px #ddf;  
 }
 .greybg, .greybg .jsavvalue, .jsavarray.jsavbararray .jsavindex.greybg .jsavvalue{
   background-color: #eee;
