--- a/AV/Development/proficiency.css
+++ b/AV/Development/proficiency.css
@@ -27,6 +27,7 @@ p.instructions {
   position: absolute;
   z-index: 101;
   line-height: normal;
+  font-size: medium;
 }
 .jsavtreenode.emptynode {
   border: 1px dashed #777 !important;
