--- a/AV/List/listADTCON.css
+++ b/AV/List/listADTCON.css
@@ -7,6 +7,7 @@
   line-height: 60px;
   font-size: 20px;
   min-width: 65px;
+  box-shadow:0px 0px 0px;
 }
 #listADTCON2 { 
   height: 200px;
@@ -17,6 +18,7 @@
   line-height: 50px;
   font-size: 20px;
   min-width: 40px;
+  box-shadow:0px 0px 0px;
 }
 
 
