Resolving the buttons layout problem and adding more expalanation

--- a/AV/Development/UnionFind_SlideShow.css
+++ b/AV/Development/UnionFind_SlideShow.css
@@ -1,6 +1,7 @@
 #container {
       width: 800px;
-	  height: 650px;
+	  height: 550px;
+	  padding: 50px;
     }
 .jsavcounter {
       position: absolute;
