--- a/AV/Development/UnionFind_SlideShow_PathCompression.css
+++ b/AV/Development/UnionFind_SlideShow_PathCompression.css
@@ -1,6 +1,6 @@
 #container_compression {
-      width: 800px;
-	  height: 550px;
+      width: 700px;
+	  height: 450px;
 	  padding: 50px;
     }
 .jsavcounter {
@@ -9,7 +9,6 @@
     }
 .jsavcanvas { height: 500px; }
 
-    }
 .jsavoutput {
       height: 75px;
     }
@@ -22,4 +21,11 @@
     }
 .highlight{
   background-color: yellow;
+}
+.jsavtree .jsavnode {
+  line-height: 35px !important;
+  min-width: 35px !important;
+  max-width: 35px !important;
+  min-height: 35px !important;
+  max-height: 35px !important;
 }
