--- a/AV/Development/UnionFind_SlideShow_PathCompression.css
+++ b/AV/Development/UnionFind_SlideShow_PathCompression.css
@@ -29,3 +29,27 @@
   min-height: 35px !important;
   max-height: 35px !important;
 }
+.jsavhorizontalarray .jsavindex:first-of-type, .jsavhorizontalarray .jsavindex:first-of-type .jsavvalue {
+  -ms-border-top-left-radius: 0px;
+  -ms-border-bottom-left-radius: 0px;
+  -moz-border-top-left-radius: 0px;
+  -moz-border-bottom-left-radius: 0px;
+  -o-border-top-left-radius: 0px;
+  -o-border-bottom-left-radius: 0px;
+  -webkit-border-top-left-radius: 0px;
+  -webkit-border-bottom-left-radius: 0px;
+  border-top-left-radius: 0px;
+  border-bottom-left-radius: 0px;
+}
+.jsavhorizontalarray .jsavindex:last-of-type, .jsavhorizontalarray .jsavindex:last-of-type .jsavvalue {
+  -ms-border-top-right-radius: 0px;
+  -ms-border-bottom-right-radius: 0px;
+  -moz-border-top-right-radius: 0px;
+  -moz-border-bottom-right-radius: 0px;
+  -o-border-top-right-radius: 0px;
+  -o-border-bottom-right-radius: 0px;
+  -webkit-border-top-right-radius: 0px;
+  -webkit-border-bottom-right-radius: 0px;
+  border-top-right-radius: 0px;
+  border-bottom-right-radius: 0px;
+}
