--- a/AV/Development/binheapPRO.css
+++ b/AV/Development/binheapPRO.css
@@ -17,3 +17,22 @@
 #procontrols {
   text-align: center;
 }
+
+.jsavlabel {
+  font-size: 120%;
+}
+.jsavhighlight {
+  font-size: 110%;
+}
+
+.jsavstack {
+  position: relative;
+  background-color: inherit;
+}
+.jsavstacknode {
+  position: absolute;
+  border-radius: 5px;
+  width: 45px;
+  height: 45px;
+  z-index: 100;
+}
