--- a/AV/Development/treeIndexingCON.css
+++ b/AV/Development/treeIndexingCON.css
@@ -23,7 +23,8 @@
 
 /* Add padding to the rectangle container to show the all the rectangles */
 #pagedBSTCON .jsavcanvas > svg {
-	padding-right: 20px;
+	height: 200px;
+	width: 320px;
 }
 
 /* Create styling for the balanceBSTCON diagram */
