Add material to CS5114. Minor cleanup for some of the new diagrams, and move to working directory

--- a/AV/Development/dynamicCON.css
+++ b/AV/Development/dynamicCON.css
@@ -1,7 +1,14 @@
-.jsavcanvas {
+#freelistCON .jsavcanvas {
  margin-left: auto;
  margin-right: auto;
- height: 135px;
+ height: 105px;
+ width: 470px;
+}
+
+#fragCON .jsavcanvas {
+ margin-left: auto;
+ margin-right: auto;
+ height: 125px;
  width: 470px;
 }
 
