created JSAV diagram for figure 13.3.1

--- a/AV/Development/seqFitCON.css
+++ b/AV/Development/seqFitCON.css
@@ -1,8 +1,8 @@
-.jsavcanvas {
+#seqFitCON .jsavcanvas {
  margin-left: auto;
  margin-right: auto;
- height: 100px;
- width: 470px;
+ height: 105px;
+ width: 500px;
 }
 
 svg{
