--- a/AV/Development/HuffProofCON.css
+++ b/AV/Development/HuffProofCON.css
@@ -1,6 +1,15 @@
 /* Styling for HuffProofCON.js / HuffProof.rst static image */
 #InvalidTree{
-  height: 360px;
-  width: 380px;
+  height: 250px;
+  width: 270px;
+}
+
+.jsavcanvas{
+  height: 250px;
+  width: 270px;
+}
+
+.jsavlabel{
+  z-index:1000;
 }
 
