--- a/AV/Development/twoThreeTreeCON.css
+++ b/AV/Development/twoThreeTreeCON.css
@@ -14,7 +14,7 @@
 
 /* Removes top margin from array objects to make the diagram a litle more compact */
 .jsavarray {
-	margin-top: 0; 
+	margin-top: 0;
 }
 
 /* Change the size of each array box */
@@ -93,4 +93,18 @@
 #splitCON .jsavoutput {
 	padding-top: 20px;
 	text-align: center;
+}
+
+/* Sytling for the arrayTree slide show ********************************/
+
+/* Set maximun width for the JSAV container */
+#arrayTree, #arrayTree .jsavoutput {
+  width: 800px;
+}
+
+/* Set width and height for the JSAV canvas */
+#arrayTree .jsavcanvas {
+  height: 750px;
+  width: 800px;
+  margin-left: 70px;
 }
