Fixed bar coloring in proficiency.css

--- a/AV/Development/proficiency.css
+++ b/AV/Development/proficiency.css
@@ -25,7 +25,7 @@
   background-color: #000;
   color: #fff;
 }
-.selected, .selected .jsavvalue, .jsavarray.jsavbararray .jsavvalue.selected {
+.selected, .selected .jsavvalue, .jsavarray.jsavbararray .jsavindex.selected .jsavvalue {
   font-size: 110%;
   background-color: #ddf;
 }
@@ -38,10 +38,10 @@
 .jsavtreenode.jsavredblacknode.selected {
   box-shadow: 0px 0px 5px 10px #ddf;  
 }
-.greybg, .greybg.jsavvalue, .jsavarray.jsavbararray .jsavvalue.greybg {
+.greybg, .greybg.jsavvalue, .jsavarray.jsavbararray .jsavindex.greybg .jsavvalue {
   background-color: #eee;
 }
-.greenbg, .greenbg.jsavvalue, .jsavarray.jsavbararray .jsavvalue.greenbg {
+.greenbg, .greenbg.jsavvalue, .jsavarray.jsavbararray .jsavindex.greenbg .jsavvalue {
   background-color: #5f5;
 }
 
