Added code to hide the content of a chapter from the table of content. Created a new directive "odsatoctree" that is automatically added by the configuration process when a chapter has a "hidden" field present. The flagged chapters entries in the TOC will be of class "hide-from-toc", and will be removed by a CSS rule.

--- a/lib/odsaMOD.css
+++ b/lib/odsaMOD.css
@@ -7,6 +7,10 @@
 .jsavcontainer {
   position: relative;
 }
+/* Hide flagged chapters fom the TOC */
+.hide-from-toc {
+  display: none;
+}
 /* Style for the registration popup window */
 .registration-popup {
   background: none repeat scroll 0 0 #333333;
