--- a/AV/Development/HuffmanCON.css
+++ b/AV/Development/HuffmanCON.css
@@ -1,4 +1,28 @@
-#finalHuffmanTree{
-  width:500px;
-  height:345px;
+#finalHuffmanTree {
+  width:450px;
+  height:540px;
+}
+
+#DecodeExample {
+  width:871px;
+  height:620px;
+}
+
+#DecodeExample .jsavtree {
+  left:370px;
+}
+
+.jsavautoresize .jsavnode {
+  min-width:30px;
+  min-height:30px;
+  width: 30px;
+  height: 30px;
+}
+
+#DecodeExample .jsavnode {
+  line-height: 30px;
+}
+
+.jsavoutput {
+  text-align: center
 }
