--- a/AV/Development/HuffmanCoding.css
+++ b/AV/Development/HuffmanCoding.css
@@ -24,18 +24,18 @@
 .jsavtree:nth-of-type(6) { left:550px;} /* move 7th tree to the right */
 .jsavtree:nth-of-type(7) { left:650px;} /* move 8th tree to the right */
 .jsavtree:nth-of-type(8) { left:750px;} /* move 9th tree to the right */
-.jsavtree:nth-of-type(9) { left:350px;} /* move 9th tree to the right */
+.jsavtree:nth-of-type(9) {top: -40px;  left:350px;} /* move 9th tree to the right */
 .jsavcanvas { height: 500px;} /* set the height of the container */
 
 /* change size and margins of arrays */
-.jsavarray { margin: 0; height: 40px; min-height: 40px; position: absolute}
-.jsavarray li { border-radius: 0 !important; height: 35px; width: 145px; font-size: 15px; line-height: 40px;}
+.jsavarray { margin: 0; height: 35px; min-height: 35px; position: absolute}
+.jsavarray li { border-radius: 0 !important; height: 35px; width: 145px; font-size: 15px; line-height: 35px;}
 .jsavarray:nth-of-type(1) {top: 0px;}
-.jsavarray:nth-of-type(2) {top: 35px;}
-.jsavarray:nth-of-type(3) {top: 70px;}
-.jsavarray:nth-of-type(4) {top: 105px;}
-.jsavarray:nth-of-type(5) {top: 140px;}
-.jsavarray:nth-of-type(6) {top: 175px;}
-.jsavarray:nth-of-type(7) {top: 210px;}
-.jsavarray:nth-of-type(8) {top: 245px;}
-.jsavarray:nth-of-type(9) {top: 280px;}
+.jsavarray:nth-of-type(2) {top: 50px;}
+.jsavarray:nth-of-type(3) {top: 90px;}
+.jsavarray:nth-of-type(4) {top: 130px;}
+.jsavarray:nth-of-type(5) {top: 170px;}
+.jsavarray:nth-of-type(6) {top: 210px;}
+.jsavarray:nth-of-type(7) {top: 250px;}
+.jsavarray:nth-of-type(8) {top: 290px;}
+.jsavarray:nth-of-type(9) {top: 330px;}
