--- a/AV/Development/HuffmanCON.css
+++ b/AV/Development/HuffmanCON.css
@@ -1,6 +1,10 @@
 #finalHuffmanTree {
   width:450px;
-  height:540px;
+  height:490px;
+}
+
+#finalHuffmanTree .jsavtree {
+  margin-top: -40px;
 }
 
 /* Sets maximum width to JSAV container */
@@ -19,36 +23,59 @@
   margin-top: -50px;
 }
 
-/*#DecodeExample {
-  width:871px;
-  height:620px;
-}
-
-#DecodeExample .jsavtree {
-  left:370px;
-}
-
-#DecodeExample .jsavnode {
-  line-height: 30px;
-}*/
-
 .jsavoutput.jsavline {
   width: 650px;
   padding-top: 20px;
   text-align: center;
 }
 
+.jsavoutput .jsavline
+
 .jsavnode .jsavvalue {
   height: 30px;
 }
-
-/*.jsavoutput {
-  text-align: center
-}*/
 
 .jsavautoresize .jsavnode {
   min-width:30px;
   min-height:30px;
   width: 30px;
   height: 30px;
+}
+
+/*=================== MExample ===================*/
+/* Sets maximum width to JSAV container */
+#MExample {
+  padding-top: 20px;
+  width: 650px;
+}
+
+/* Sets width and height to the JSAV canvas */
+#MExample .jsavcanvas {
+  height: 550px;
+  width: 650px;
+}
+
+#MExample .jsavtree {
+  margin-top: -50px;
+}
+
+
+/*=================== MExample ===================*/
+#Con1 {
+  padding-top: 20px;
+  width: 650px;
+}
+
+/* Sets width and height to the JSAV canvas */
+#Con1 .jsavcanvas {
+  height: 550px;
+  width: 650px;
+}
+
+#Con1 .jsavtree {
+  margin-top: -30px;
+}
+
+#Con1 .jsavoutput.jsavline {
+  width:650px;
 }
